auto-test/tests/chapter_18/invalid_parse/extra_credit/label_inside_struct_decl.c
/* Labels can't appear inside structure declarations */

struct s {
    int i;
    
    
    foo : int j;
};

int main(void) {
    return 0;
}